# forsch-agent-ops

./: README.md  pyproject.toml
src/forsch/agent_ops/: __init__.py  agent.py
