[project]
name = "forsch-agent-ops"
version = "0.1.0"
description = "Ops agent — infrastructure & operations lead"
requires-python = ">=3.10"
dependencies = [
    "forsch-adk-components>=0.1.0",
    "google-adk>=2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "ruff>=0.8",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
